crates/analyzer/tests/snapshots/errors__call_generic_function_with_unsatisfied_bound.snap
---
source: crates/analyzer/tests/errors.rs
expression: "error_string(&path, test_files::fixture(path))"

---
error: the trait bound `bool: IsNumeric` is not satisfied
   ┌─ compile_errors/call_generic_function_with_unsatisfied_bound.fe:14:13
   │
14 │     foo.bar(true)
   │             ^^^^ the trait `IsNumeric` is not implemented for `bool`

error: incorrect type for `bar` argument at position 0
   ┌─ compile_errors/call_generic_function_with_unsatisfied_bound.fe:14:13
   │
14 │     foo.bar(true)
   │             ^^^^ this has type `bool`; expected type `T`


